# apbr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
config/: CMakeLists.txt  version.hpp.in
resources/shaders/: rect.frag
shaders/: rect.frag  rect.vert  test.frag  triangle.frag  triangle.vert
src/: CMakeLists.txt  Colors.hpp  Logger.cpp  Logger.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Window.cpp  Window.hpp  main.cpp
src/apbr/: CMakeLists.txt  Logger.cpp  Shader.cpp  ShaderProgram.cpp  Window.cpp  misc.cpp
src/apbr/include/apbr/: Logger.hpp  Shader.hpp  ShaderProgram.hpp  Window.hpp  apbr.hpp  color.hpp  misc.hpp
